# pantheon

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  INSTRUCTIONS.md  README.md  TECHNICAL.md  docker-compose.infra.yml  docker-compose.yml  main.py  pyproject.toml  start-dev.ps1
policy/: curated_playbooks.json  sim_scope.json
scripts/: fetch_attack_stix.py  fetch_nvd.py  init_db.py  schema.sql  test_ner_extractor.py  test_ornith_connection.py
src/pantheon/acme/: feedback_auth.py  ipca.py  ranker.py  stage1.py
src/pantheon/api/: main.py  war_room.html
src/pantheon/attck_graph/: graph.py
src/pantheon/audit/: enclave.py  trail.py  worker.py  worm.py
src/pantheon/cache/: semantic.py
src/pantheon/centinela/: cci.py  detector.py  pipeline.py
src/pantheon/connectors/: base.py  manager.py  suricata.py  wazuh.py
src/pantheon/core/: approval.py  config.py  event_bus.py  metrics.py  ollama_llm.py  pipeline.py  profile_store.py  purple_bridge.py
src/pantheon/guards/: circuit_breaker.py  classifier.py  guard.py
src/pantheon/hermes/: agent.py  nodes.py  state.py
src/pantheon/mcp/: tools.py
src/pantheon/muralla/: allowlist.py  validator.py
src/pantheon/ornith/: client.py  embedding.py  episode_schema.py  ner_extractor.py
src/pantheon/osint/: __init__.py  aggregator.py  models.py
src/pantheon/osint/sources/: __init__.py  abuseipdb.py  base.py  feodotracker.py
src/pantheon/war_room/: app.py
tests/adversarial/: test_security_controls.py
tests/unit/: test_acme.py  test_api.py  test_approval.py  test_ares_bridge.py  test_attck_graph.py  test_audit_trail.py  test_cache.py  test_centinela.py  test_config.py  test_enclave.py  test_episode_schema.py  test_event_bus.py  test_guards.py  test_hermes.py  test_improvements.py  test_muralla.py  test_ner_extractor.py  test_purple_bridge.py  test_war_room.py  test_worm.py
