[project]
name = "pantheon"
version = "0.1.0"
description = "Plataforma de Threat Hunting Autónomo con Memoria Episódica para SOC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # PostgreSQL
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    # Redis
    "redis>=5.0.0",
    # Qdrant
    "qdrant-client>=1.18.0",
    # Embeddings
    "fastembed>=0.8.0",
    # NLP / IOC extraction
    "spacy>=3.8.14",
    "regex>=2026.6.28",
    # ML
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "hdbscan>=0.8.38",
    "networkx>=3.3",
    # LangGraph / LLM
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    # UI
    "gradio>=5.0.0",
    # Observability
    "prometheus-client>=0.21.0",
    # Utils
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pantheon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
